<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/verifyTv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textSize="22sp"
        tools:text="Verify +918527039849" />

    <TextView
        android:id="@+id/waitingTv"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:gravity="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/waiting_to_detect_sms" />

    <TextView
        android:id="@+id/counterTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/sentCodeEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:imeActionId="6"
        android:imeActionLabel="Send"
        android:imeOptions="actionUnspecified"
        android:inputType="phone"
        android:letterSpacing="0.8"
        android:maxLength="6"
        android:hint="@string/otp_hint"
        android:padding="10dp"
        android:textAlignment="center"
        android:singleLine="true"
        android:textSize="24sp"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/enter_6_digit_code"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verificationBtn"
        android:layout_marginTop="12dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="15dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:cornerRadius="7dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_code"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:padding="15dp"
        android:text="@string/resend_sms"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="5dp" />

</LinearLayout>