<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/profileInfoTv"
        android:layout_marginTop="40dp"
        android:text="@string/profile_info"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/provideInfoTv"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/name_and_profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImgView"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="45dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_avatar"
        app:shapeAppearanceOverlay="@style/CircularImageView"/>

    <EditText
        android:id="@+id/userName"
        android:textSize="21sp"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/type_your_name_here"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtnProfile"
        app:cornerRadius="7dp"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAllCaps="true"
        android:text="@string/next"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>